# terminal-ui-biotech-GG

./: .gitattributes  .gitignore  .npmignore  ARCHITECTURE.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  COPILOT_INSTRUCTIONS_SUMMARY.md  DOCUMENTATION_INDEX.md  EPIDEMIOLOGY_ENHANCEMENT_SUMMARY.md  EPIDEMIOLOGY_IMPLEMENTATION_SUMMARY.md  EVIDENCE_JOURNAL_COMPLETE.md  EVIDENCE_JOURNAL_IMPLEMENTATION.md  FINAL_SUMMARY.md  GLASS_UI_COMPLETE_SUMMARY.md  GLASS_UI_INTEGRATION.md  GLASS_UI_QUICK_START.md  GLASS_UI_README.md  GLASS_UI_VISUAL_SHOWCASE.md  IMPLEMENTATION_CATALYST_SCORING.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_MANUAL_REFRESH_PWA.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_THERAPEUTIC_AREAS.md  IMPLEMENTATION_VISUAL.txt  INSTALLATION.md  INTEGRATION_COMPLETE_REAL_DATA.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  MANUAL_REFRESH_COMPLETE.md  MONITORING_COMPLETE.md  Makefile  NEURAL_ARCHITECTURE_COMPLETE.md  OPEN_DATA_TERMINAL_PLAN.md  P0_FIXES_SUMMARY.md  P0_P1_IMPLEMENTATION.md  PHASE2_COMPLETE_SUMMARY.md  (+27 more)
.git-rewrite/: backup-refs  commit  heads  index  message  parse  raw-refs  revs
.github/: copilot-instructions.md
REFERENCE/: Document.docx  Loader.jsx
backend/: .env.example  NEWS_SCRAPER_API.md  README_EPIDEMIOLOGY.md  SCRAPERS_README.md  live_biotech_data.json  package.json  standalone-test.ts  test-disease-service.ts
data/: companies.yaml  programs.yaml
docs/: API_INTEGRATION.md  ARCHITECTURE_OVERVIEW.md  AURORA_TASKBAR_API.md  AURORA_TASKBAR_IMPLEMENTATION.md  CATALYST_SCORING_SYSTEM.md  COMMAND_PALETTE.md  CROSS_PLATFORM_TESTING_GUIDE.md  DATA_GOVERNANCE.md  DEEP_DIVE_SUMMARY.md  DEVELOPMENT.md  EPIDEMIOLOGY_MODULE.md  EPIDEMIOLOGY_PLATFORM_EXPANSION.md  EPIDEMIOLOGY_SEER_WHO_CDC.md  EVIDENCE_JOURNAL.md  FEATURE_AUDIT_AND_DEPLOYMENT_VERIFICATION.md  FINANCIALS_MODULE.md  FRONTEND_MONITORING_EXAMPLES.md  HOUSE_VS_STREET.md  HOW_TO_ADD_ENDPOINT_TRUTH.md  IMPLEMENTATION_PRIORITY_MATRIX.md  IMPORT_EXPORT.md  INTERACTIVE_SMOKE_TEST.html  IOS_PWA_GUIDE.md  LIVE_MONITORING.md  LOE_CLIFF.md  MANUAL_NETWORK_TEST.md  MANUAL_NETWORK_TEST_DIAGRAM.md  MANUAL_NETWORK_TEST_README.md  MANUAL_NETWORK_TEST_RESULTS.md  MANUAL_NETWORK_TEST_SUMMARY.md  MANUAL_REFRESH_TESTING.md  MENU_STRUCTURE.md  MIGRATION.md  MOBILE_QUICK_START.md  MONITORING_INTEGRATION.md  QUICK_START_MONITORING.md  README.md  REFRESH_MODEL.md  REPORT_TEMPLATES.md  ROADMAP_PHASE_3.md  (+12 more)
examples/: App.tsx  BiotechExample.module.css  BiotechExample.tsx  CatalystScoringExample.module.css  CatalystScoringExample.tsx  EpidemiologyExample.module.css  EpidemiologyExample.tsx  GlassUIExample.module.css  GlassUIExample.tsx  README.md  catalyst-radar-demo.html  index.html  main.tsx  package.json  tsconfig.json  vite.config.ts
frontend-components/: package.json  tsconfig.json  vite.config.ts
mobile/: README.md  index.html  package.json  vite.config.ts
platform/: __init__.py
scripts/: generate-icons.sh  scrape.sh  (+9 more)
(+575 files in other folders)
